--- a/app/index.html
+++ b/app/index.html
@@ -340,7 +340,7 @@
 				</div>
 			</div>
 			<div class="analog-products__cards">
-				<div class="analog-products__cards-img"><img src="img/another-product/another_products-1.jpg" alt=""></div>
+				<div class="analog-products__cards-img"><img src="img/another-product/another_products-3.jpg" alt=""></div>
 				<div class="analog-products__cards-cod-presence">
 					<div class="analog-products__cards-cod">Код товара:39207</div>
 					<div class="analog-products__cards-presence">В наличии</div>
@@ -359,7 +359,7 @@
 				</div>
 			</div>
 			<div class="analog-products__cards">
-				<div class="analog-products__cards-img"><img src="img/another-product/another_products-1.jpg" alt=""></div>
+				<div class="analog-products__cards-img"><img src="img/another-product/another_products-2.jpg" alt=""></div>
 				<div class="analog-products__cards-cod-presence">
 					<div class="analog-products__cards-cod">Код товара:39207</div>
 					<div class="analog-products__cards-presence">В наличии</div>
@@ -380,9 +380,103 @@
 		</div>
 	</section>
 
-	
-	<!-- SECTION ANALOG-PRODUCTS-->
 
+	<!-- SECTION Description product-->
+	<section class="description-product">
+		<div class="description-product__nav">
+			<ul class="description-product__nav-list">
+				<li class="description-product__nav-items"><span class="active filter">Характеристики</span></li>
+				<li class="description-product__nav-items"><span>Описание</span></li>
+				<li class="description-product__nav-items"><span>Отзывы и вопросы <small>(40)</small></span></li>
+				<li class="description-product__nav-items"><span>Видеообзоры и статьи</span></li>
+				<li class="description-product__nav-items"><span>Сертификаты</span></li>
+			</ul>
+		</div>
+		<div id="filter-project" class="w930">
+			<div class="description-product__characteristics">
+				<div class="description-product__characteristics-title title2">
+					Характеристики товара
+				</div>
+				<table>
+					<tr>
+						<td>Класс вязкости: </td>
+						<td>5W-40 </td>
+					</tr>
+					<tr>
+						<td>сСт при 40ºC: </td>
+						<td>84</td>
+					</tr>
+					<tr>
+						<td>сСт при 100ºC: </td>
+						<td>14</td>
+					</tr>
+					<tr>
+						<td>Зольность сульфатная, % мас., ASTM D 874: </td>
+						<td>1.1</td>
+					</tr>
+					<tr>
+						<td>Содержание фосфора: </td>
+						<td>0.0095</td>
+					</tr>
+					<tr>
+						<td>Температура вспышки, ºC, ASTM D 92:</td>
+						<td>222</td>
+					</tr>
+					<tr>
+						<td>Температура застывания, ºC, ASTM D 97: </td>
+						<td>-39</td>
+					</tr>
+				</table>
+				<div class="all-characteristics"><span>Показать все характеристики</span></div>
+			</div>
+			<div class="description-product__product-description">
+				<div class="description-product__product-description_title title2">
+					Описание товара
+				</div>
+				<p>Mobil Super 3000 X1 5W-40 представляет собой синтетическое моторное масло,
+					обеспечивающее длительный срок службы двигателей в автомобилях различных типов
+					и годов выпуска, а также повышенный уровень их защиты в широком диапазоне
+					температур.
+				</p>
+				<p>Продукты семейства Mobil Super 3000™ уже хорошо зарекомендовали себя на рынке,
+					поэтому Вы можете быть уверены в том, что
+					эксплуатационные свойства Вашего автомобиля будут полностью соответствовать ожиданиям.
+				</p>
+				<div class="all-characteristics"><span>Подробнее</span></div>
+			</div>
+			<div class="description-product__reviews">
+				<div class="description-product__reviews-nav">
+					<div class="flex-group">
+						<div class="review reviews-nav-element active">Отзывы</div>
+						<div class="question reviews-nav-element">Вопросы</div>
+					</div>
+					<div class="button-feedback reviews-nav-element">Оставить отзыв</div>
+				</div>
+				<div class="description-product__reviews-content">
+					<div class="reviews-content">
+
+					</div>
+					<div class="raiting-product">
+						<div class="rating-container">
+							<ul class="rating clearfix">
+								<li class="current" style="width: 80%;"><span class="star1"  title="Рейтинг плохо"></span></li>
+								<li><span class="star2" title="Рейтинг норм"></span></li>
+								<li><span class="star3" title="Рейтинг среднее"></span></li>
+								<li><span class="star4" title="Рейтинг хорошо"></span></li>
+								<li><span class="star5" title="Рейтинг очень хорошо"></span></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="description-product__video-reviews_articles">
+
+			</div>
+			<div class="description-product__certificates">
+
+			</div>
+		</div>
+	</section>
 </main>
 
 <footer>
