--- a/app/index.html
+++ b/app/index.html
@@ -444,6 +444,7 @@
 				</p>
 				<div class="all-characteristics"><span>Подробнее</span></div>
 			</div>
+
 			<div class="description-product__reviews">
 				<div class="description-product__reviews-nav">
 					<div class="flex-group">
@@ -452,23 +453,147 @@
 					</div>
 					<div class="button-feedback reviews-nav-element">Оставить отзыв</div>
 				</div>
-				<div class="description-product__reviews-content">
-					<div class="reviews-content">
+				<div class="description-product__reviews-container">
+					<div class="description-product__reviews-content">
+						<div class="reviews-content">
+							<div class="reviews-content__user-name--date">
+								<div class="user-name title3">Владимир</div>
+								<div class="date">04.07.2016</div>
+							</div>
+							<div class="reviews-content__text">
+								У Huawei краща основна камера ніж в Lenovo при тому, що Lenovo ніколи не були
+								сильні в плані фото, а також у y6 pro кращий процесор (вища частота) і, як кажуть,
+								краща оптимізація, що позитивно впливає на тривалість роботи. До того ж, мені здається,
+								що у Huawei менше проблем по якості ніж у Lenovo. Захист від бризг у Р1m є скоріше
+								рекламним трюком
+							</div>
+							<div class="reviews-content__advantages">
+								<span>Достоинства:</span> хорошая батарея, и вообще неплохой смартфон
+							</div>
+							<div class="reviews-content__disadvantages">
+								<span>Недостатки:</span> не обнаружены
+							</div>
+							<div class="reviews-content__answers">
+								<div class="reviews-content__answers-answer">
+									<div class="answer border-bottom"><span>1</span> ответ</div>
+									<div class="reply border-bottom">Ответить</div>
+								</div>
+								<div class="reviews-content__answers-question">
+									Был ли вам полезен этот отзыв: <span class="like">14</span>
+									<span class="dislike">3</span>
+								</div>
+							</div>
+						</div>
+						<div class="raiting-product">
+							<div class="raiting-product__title title3">Оценка</div>
+							<div class="rating-container">
+								<ul class="rating clearfix">
+									<li class="current" style="width: 80%;"><span class="star1"  title="Рейтинг плохо"></span></li>
+									<li><span class="star2" title="Рейтинг норм"></span></li>
+									<li><span class="star3" title="Рейтинг среднее"></span></li>
+									<li><span class="star4" title="Рейтинг хорошо"></span></li>
+									<li><span class="star5" title="Рейтинг очень хорошо"></span></li>
+								</ul>
+								<div class="raiting-text title3">4,0</div>
+							</div>
 
+						</div>
 					</div>
-					<div class="raiting-product">
-						<div class="rating-container">
-							<ul class="rating clearfix">
-								<li class="current" style="width: 80%;"><span class="star1"  title="Рейтинг плохо"></span></li>
-								<li><span class="star2" title="Рейтинг норм"></span></li>
-								<li><span class="star3" title="Рейтинг среднее"></span></li>
-								<li><span class="star4" title="Рейтинг хорошо"></span></li>
-								<li><span class="star5" title="Рейтинг очень хорошо"></span></li>
-							</ul>
+					<div class="description-product__reviews-content">
+						<div class="reviews-content">
+							<div class="reviews-content__user-name--date">
+								<div class="user-name title3">Владимир</div>
+								<div class="date">04.07.2016</div>
+							</div>
+							<div class="reviews-content__text">
+								У Huawei краща основна камера ніж в Lenovo при тому, що Lenovo ніколи не були
+								сильні в плані фото, а також у y6 pro кращий процесор (вища частота) і, як кажуть,
+								краща оптимізація, що позитивно впливає на тривалість роботи. До того ж, мені здається,
+								що у Huawei менше проблем по якості ніж у Lenovo. Захист від бризг у Р1m є скоріше
+								рекламним трюком
+							</div>
+							<div class="reviews-content__advantages">
+								<span>Достоинства:</span> хорошая батарея, и вообще неплохой смартфон
+							</div>
+							<div class="reviews-content__disadvantages">
+								<span>Недостатки:</span> не обнаружены
+							</div>
+							<div class="reviews-content__answers">
+								<div class="reviews-content__answers-answer">
+									<div class="answer border-bottom"><span>1</span> ответ</div>
+									<div class="reply border-bottom">Ответить</div>
+								</div>
+								<div class="reviews-content__answers-question">
+									Был ли вам полезен этот отзыв: <span class="like">14</span>
+									<span class="dislike">3</span>
+								</div>
+							</div>
+						</div>
+						<div class="raiting-product">
+							<div class="raiting-product__title title3">Оценка</div>
+							<div class="rating-container">
+								<ul class="rating clearfix">
+									<li class="current" style="width: 80%;"><span class="star1"  title="Рейтинг плохо"></span></li>
+									<li><span class="star2" title="Рейтинг норм"></span></li>
+									<li><span class="star3" title="Рейтинг среднее"></span></li>
+									<li><span class="star4" title="Рейтинг хорошо"></span></li>
+									<li><span class="star5" title="Рейтинг очень хорошо"></span></li>
+								</ul>
+								<div class="raiting-text title3">4,0</div>
+							</div>
+
+						</div>
+					</div>
+					<div class="description-product__reviews-content">
+						<div class="reviews-content">
+							<div class="reviews-content__user-name--date">
+								<div class="user-name title3">Владимир</div>
+								<div class="date">04.07.2016</div>
+							</div>
+							<div class="reviews-content__text">
+								У Huawei краща основна камера ніж в Lenovo при тому, що Lenovo ніколи не були
+								сильні в плані фото, а також у y6 pro кращий процесор (вища частота) і, як кажуть,
+								краща оптимізація, що позитивно впливає на тривалість роботи. До того ж, мені здається,
+								що у Huawei менше проблем по якості ніж у Lenovo. Захист від бризг у Р1m є скоріше
+								рекламним трюком
+							</div>
+							<div class="reviews-content__advantages">
+								<span>Достоинства:</span> хорошая батарея, и вообще неплохой смартфон
+							</div>
+							<div class="reviews-content__disadvantages">
+								<span>Недостатки:</span> не обнаружены
+							</div>
+							<div class="reviews-content__answers">
+								<div class="reviews-content__answers-answer">
+									<div class="answer border-bottom"><span>1</span> ответ</div>
+									<div class="reply border-bottom">Ответить</div>
+								</div>
+								<div class="reviews-content__answers-question">
+									Был ли вам полезен этот отзыв: <span class="like">14</span>
+									<span class="dislike">3</span>
+								</div>
+							</div>
+						</div>
+						<div class="raiting-product">
+							<div class="raiting-product__title title3">Оценка</div>
+							<div class="rating-container">
+								<ul class="rating clearfix">
+									<li class="current" style="width: 80%;"><span class="star1"  title="Рейтинг плохо"></span></li>
+									<li><span class="star2" title="Рейтинг норм"></span></li>
+									<li><span class="star3" title="Рейтинг среднее"></span></li>
+									<li><span class="star4" title="Рейтинг хорошо"></span></li>
+									<li><span class="star5" title="Рейтинг очень хорошо"></span></li>
+								</ul>
+								<div class="raiting-text title3">4,0</div>
+							</div>
+
 						</div>
 					</div>
 				</div>
+
 			</div>
+
+
 			<div class="description-product__video-reviews_articles">
 
 			</div>
