--- a/app/index.html
+++ b/app/index.html
@@ -502,7 +502,7 @@
 					<div class="description-product__reviews-content">
 						<div class="reviews-content">
 							<div class="reviews-content__user-name--date">
-								<div class="user-name title3">Владимир</div>
+								<div class="user-name title3">Панас</div>
 								<div class="date">04.07.2016</div>
 							</div>
 							<div class="reviews-content__text">
@@ -512,6 +512,7 @@
 								що у Huawei менше проблем по якості ніж у Lenovo. Захист від бризг у Р1m є скоріше
 								рекламним трюком
 							</div>
+							<div class="all-characteristics mb20"><span>Читать полностью</span></div>
 							<div class="reviews-content__advantages">
 								<span>Достоинства:</span> хорошая батарея, и вообще неплохой смартфон
 							</div>
@@ -533,13 +534,13 @@
 							<div class="raiting-product__title title3">Оценка</div>
 							<div class="rating-container">
 								<ul class="rating clearfix">
-									<li class="current" style="width: 80%;"><span class="star1"  title="Рейтинг плохо"></span></li>
+									<li class="current" style="width: 60%;"><span class="star1"  title="Рейтинг плохо"></span></li>
 									<li><span class="star2" title="Рейтинг норм"></span></li>
 									<li><span class="star3" title="Рейтинг среднее"></span></li>
 									<li><span class="star4" title="Рейтинг хорошо"></span></li>
 									<li><span class="star5" title="Рейтинг очень хорошо"></span></li>
 								</ul>
-								<div class="raiting-text title3">4,0</div>
+								<div class="raiting-text title3">3,0</div>
 							</div>
 
 						</div>
@@ -547,7 +548,7 @@
 					<div class="description-product__reviews-content">
 						<div class="reviews-content">
 							<div class="reviews-content__user-name--date">
-								<div class="user-name title3">Владимир</div>
+								<div class="user-name title3">Анастасия</div>
 								<div class="date">04.07.2016</div>
 							</div>
 							<div class="reviews-content__text">
@@ -556,12 +557,6 @@
 								краща оптимізація, що позитивно впливає на тривалість роботи. До того ж, мені здається,
 								що у Huawei менше проблем по якості ніж у Lenovo. Захист від бризг у Р1m є скоріше
 								рекламним трюком
-							</div>
-							<div class="reviews-content__advantages">
-								<span>Достоинства:</span> хорошая батарея, и вообще неплохой смартфон
-							</div>
-							<div class="reviews-content__disadvantages">
-								<span>Недостатки:</span> не обнаружены
 							</div>
 							<div class="reviews-content__answers">
 								<div class="reviews-content__answers-answer">
@@ -578,18 +573,19 @@
 							<div class="raiting-product__title title3">Оценка</div>
 							<div class="rating-container">
 								<ul class="rating clearfix">
-									<li class="current" style="width: 80%;"><span class="star1"  title="Рейтинг плохо"></span></li>
+									<li class="current" style="width: 100%;"><span class="star1"  title="Рейтинг плохо"></span></li>
 									<li><span class="star2" title="Рейтинг норм"></span></li>
 									<li><span class="star3" title="Рейтинг среднее"></span></li>
 									<li><span class="star4" title="Рейтинг хорошо"></span></li>
 									<li><span class="star5" title="Рейтинг очень хорошо"></span></li>
 								</ul>
-								<div class="raiting-text title3">4,0</div>
+								<div class="raiting-text title3">5,0</div>
 							</div>
 
 						</div>
 					</div>
 				</div>
+				<div class="all-characteristics"><span>Показать все отзывы</span></div>
 
 			</div>
 
