добавив ще карточки знизу

--- a/app/index.html
+++ b/app/index.html
@@ -590,11 +590,416 @@
 			</div>
 
 
-			<div class="description-product__video-reviews_articles">
+			<div class="description-product__video-reviews">
+				<div class="video-reviews__title title2">
+					Видеообзоры <span>(2)</span>
+				</div>
+				<div class="video-reviews__container">
+					<div class="video-block">
+						<img src="img/video-review/video-rev1.jpg" alt="">
+					</div>
+					<div class="video-block">
+						<img src="img/video-review/video-rev2.jpg" alt="">
+					</div>
+				</div>
+			</div>
+			<div class="wrap-articles">
+				<div class="description-product__articles-title title2">
+					Статьи <span>(2)</span>
+				</div>
+				<div class="wrap-articles-content">
+					<article class="description-product__articles">
+						<div class="description-product__articles-container">
+							<div class="articles-img">
+								<img src="img/articles/article1.jpg" alt="">
+							</div>
+							<div class="articles-content">
+								<div class="articles-content__data">
+									16 августа 2016
+								</div>
+								<div class="articles-content__title title2">
+									Подробный обзор и выявление
+									недостатков навигатора
+									DriveAssist 50LMT
+								</div>
+								<div class="articles-content__text">
+									Современные технологии буквально с каждым днем все глубже и глубже
+									загоняют в могилу некоторые автомобильные девайсы, взять к примеру GPS навигатор.
+									Еще каких-то два-три ... года назад, он был одним из самых желаемых ...
+									ююююююавто-гаджетов. А теперь достаточно скачать на смартфон бесплатную
+								</div>
+							</div>
+						</div>
+					</article>
+					<article class="description-product__articles">
+
+						<div class="description-product__articles-container">
+							<div class="articles-img">
+								<img src="img/articles/article2.jpg" alt="">
+							</div>
+							<div class="articles-content">
+								<div class="articles-content__data">
+									16 августа 2016
+								</div>
+								<div class="articles-content__title title2">
+									Подробный обзор и выявление
+									недостатков навигатора
+									DriveAssist 50LMT
+								</div>
+								<div class="articles-content__text">
+									Современные технологии буквально с каждым днем все глубже и глубже
+									загоняют в могилу некоторые автомобильные девайсы, взять к примеру GPS навигатор.
+									Еще каких-то два-три ... года назад, он был одним из самых желаемых ...
+									ююююююавто-гаджетов. А теперь достаточно скачать на смартфон бесплатную
+								</div>
+							</div>
+						</div>
+					</article>
+				</div>
 
 			</div>
-			<div class="description-product__certificates">
 
+			<div class="description-product__certificates">
+				<div class="description-product__certificates-title title2">Сертификаты соответствия</div>
+				<div class="product-certificates__container">
+					<img src="img/diploms/sertificat1.jpg" alt="">
+					<img src="img/diploms/sertificat2.jpg" alt="">
+					<img src="img/diploms/sertificat3.jpg" alt="">
+					<img src="img/diploms/sertificat4.jpg" alt="">
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="analog-products">
+		<div class="analog-products__title title1">С этим товаром так же покупают:</div>
+		<div class="analog-products__slider owl-carousel owl-theme" id="analog-products__slider3">
+			<div class="analog-products__cards analog-products__cards-action">
+				<div class="analog-products__cards-img"><img src="img/another-product/another_products-1.jpg" alt=""></div>
+				<div class="analog-products__cards-cod-presence">
+					<div class="analog-products__cards-cod">Код товара:39207</div>
+					<div class="analog-products__cards-presence">В наличии</div>
+				</div>
+
+				<div class="analog-products__cards-description">Трансмиссионное масло
+					CASTRO Manual EP 80W-90 1л
+				</div>
+				<div class="analog-products__cards-price">
+					<div class="standart-price">
+						<span>104</span> <small>грн</small>
+					</div>
+					<div class="action-price">
+						<span>125</span> <small>грн</small>
+					</div>
+				</div>
+				<div class="button-buy__compare flex-group">
+					<div class="button-buy">
+						Купить
+					</div>
+					<div class="compare">
+
+					</div>
+				</div>
+				<div class="rating-container-wrap flex-group">
+					<div class="rating-container">
+						<ul class="rating clearfix">
+							<li class="current" style="width: 100%;"><span class="star1"  title="Рейтинг плохо"></span></li>
+							<li><span class="star2" title="Рейтинг норм"></span></li>
+							<li><span class="star3" title="Рейтинг среднее"></span></li>
+							<li><span class="star4" title="Рейтинг хорошо"></span></li>
+							<li><span class="star5" title="Рейтинг очень хорошо"></span></li>
+						</ul>
+					</div>
+					<div class="review">
+						3 отзыва
+					</div>
+				</div>
+			</div>
+			<div class="analog-products__cards">
+				<div class="analog-products__cards-img"><img src="img/another-product/another_products-2.jpg" alt=""></div>
+				<div class="analog-products__cards-cod-presence">
+					<div class="analog-products__cards-cod">Код товара:39207</div>
+					<div class="analog-products__cards-presence">В наличии</div>
+				</div>
+
+				<div class="analog-products__cards-description">Трансмиссионное масло
+					CASTRO Manual EP 80W-90 1л
+				</div>
+				<div class="analog-products__cards-price">
+					<div class="standart-price">
+						<span>453</span> <small>грн</small>
+					</div>
+					<div class="action-price">
+						<span></span> <small></small>
+					</div>
+				</div>
+				<div class="button-buy__compare flex-group">
+					<div class="button-buy">
+						Купить
+					</div>
+					<div class="compare">
+					</div>
+				</div>
+				<div class="rating-container-wrap flex-group">
+					<div class="rating-container">
+						<ul class="rating clearfix">
+							<li class="current" style="width: 100%;"><span class="star1"  title="Рейтинг плохо"></span></li>
+							<li><span class="star2" title="Рейтинг норм"></span></li>
+							<li><span class="star3" title="Рейтинг среднее"></span></li>
+							<li><span class="star4" title="Рейтинг хорошо"></span></li>
+							<li><span class="star5" title="Рейтинг очень хорошо"></span></li>
+						</ul>
+					</div>
+					<div class="review">
+						3 отзыва
+					</div>
+				</div>
+			</div>
+			<div class="analog-products__cards">
+				<div class="analog-products__cards-img"><img src="img/another-product/another_products-3.jpg" alt=""></div>
+				<div class="analog-products__cards-cod-presence">
+					<div class="analog-products__cards-cod">Код товара:39207</div>
+					<div class="analog-products__cards-presence analog-products__cards-presence-end ">Заканчивается</div>
+				</div>
+
+				<div class="analog-products__cards-description">Трансмиссионное масло
+					CASTRO Manual EP 80W-90 1л
+				</div>
+				<div class="analog-products__cards-price">
+					<div class="standart-price">
+						<span>268</span> <small>грн</small>
+					</div>
+					<div class="action-price">
+						<span></span> <small></small>
+					</div>
+				</div>
+				<div class="button-buy__compare flex-group">
+					<div class="button-buy">
+						Купить
+					</div>
+					<div class="compare">
+
+					</div>
+				</div>
+				<div class="rating-container-wrap flex-group">
+					<div class="rating-container">
+						<ul class="rating clearfix">
+							<li class="current" style="width: 100%;"><span class="star1"  title="Рейтинг плохо"></span></li>
+							<li><span class="star2" title="Рейтинг норм"></span></li>
+							<li><span class="star3" title="Рейтинг среднее"></span></li>
+							<li><span class="star4" title="Рейтинг хорошо"></span></li>
+							<li><span class="star5" title="Рейтинг очень хорошо"></span></li>
+						</ul>
+					</div>
+					<div class="review">
+						3 отзыва
+					</div>
+				</div>
+			</div>
+			<div class="analog-products__cards">
+				<div class="analog-products__cards-img"><img src="img/another-product/another_products-4.jpg" alt=""></div>
+				<div class="analog-products__cards-cod-presence">
+					<div class="analog-products__cards-cod">Код товара:39207</div>
+					<div class="analog-products__cards-presence">В наличии</div>
+				</div>
+
+				<div class="analog-products__cards-description">Трансмиссионное масло
+					CASTRO Manual EP 80W-90 1л
+				</div>
+				<div class="analog-products__cards-price">
+					<div class="standart-price">
+						<span>104</span> <small>грн</small>
+					</div>
+					<div class="action-price">
+						<span></span> <small></small>
+					</div>
+				</div>
+				<div class="button-buy__compare flex-group">
+					<div class="button-buy">
+						Купить
+					</div>
+					<div class="compare">
+
+					</div>
+				</div>
+				<div class="rating-container-wrap flex-group">
+					<div class="rating-container">
+						<ul class="rating clearfix">
+							<li class="current" style="width: 100%;"><span class="star1"  title="Рейтинг плохо"></span></li>
+							<li><span class="star2" title="Рейтинг норм"></span></li>
+							<li><span class="star3" title="Рейтинг среднее"></span></li>
+							<li><span class="star4" title="Рейтинг хорошо"></span></li>
+							<li><span class="star5" title="Рейтинг очень хорошо"></span></li>
+						</ul>
+					</div>
+					<div class="review">
+						3 отзыва
+					</div>
+				</div>
+			</div>
+			<div class="analog-products__cards">
+				<div class="analog-products__cards-img"><img src="img/another-product/another_products-5.jpg" alt=""></div>
+				<div class="analog-products__cards-cod-presence">
+					<div class="analog-products__cards-cod">Код товара:39207</div>
+					<div class="analog-products__cards-presence">В наличии</div>
+				</div>
+
+				<div class="analog-products__cards-description">Трансмиссионное масло
+					CASTRO Manual EP 80W-90 1л
+				</div>
+				<div class="analog-products__cards-price">
+					<div class="standart-price">
+						<span>104</span> <small>грн</small>
+					</div>
+					<div class="action-price">
+						<span></span> <small></small>
+					</div>
+				</div>
+				<div class="button-buy__compare flex-group">
+					<div class="button-buy">
+						Купить
+					</div>
+					<div class="compare">
+
+					</div>
+				</div>
+				<div class="rating-container-wrap flex-group">
+					<div class="rating-container">
+						<ul class="rating clearfix">
+							<li class="current" style="width: 100%;"><span class="star1"  title="Рейтинг плохо"></span></li>
+							<li><span class="star2" title="Рейтинг норм"></span></li>
+							<li><span class="star3" title="Рейтинг среднее"></span></li>
+							<li><span class="star4" title="Рейтинг хорошо"></span></li>
+							<li><span class="star5" title="Рейтинг очень хорошо"></span></li>
+						</ul>
+					</div>
+					<div class="review">
+						3 отзыва
+					</div>
+				</div>
+			</div>
+			<div class="analog-products__cards">
+				<div class="analog-products__cards-img"><img src="img/another-product/another_products-1.jpg" alt=""></div>
+				<div class="analog-products__cards-cod-presence">
+					<div class="analog-products__cards-cod">Код товара:39207</div>
+					<div class="analog-products__cards-presence">В наличии</div>
+				</div>
+
+				<div class="analog-products__cards-description">Трансмиссионное масло
+					CASTRO Manual EP 80W-90 1л
+				</div>
+				<div class="analog-products__cards-price">
+					<div class="standart-price">
+						<span>104</span> <small>грн</small>
+					</div>
+					<div class="action-price">
+						<span>125</span> <small>грн</small>
+					</div>
+				</div>
+				<div class="button-buy__compare flex-group">
+					<div class="button-buy">
+						Купить
+					</div>
+					<div class="compare">
+						Сравнить
+					</div>
+				</div>
+				<div class="rating-container-wrap flex-group">
+					<div class="rating-container">
+						<ul class="rating clearfix">
+							<li class="current" style="width: 100%;"><span class="star1"  title="Рейтинг плохо"></span></li>
+							<li><span class="star2" title="Рейтинг норм"></span></li>
+							<li><span class="star3" title="Рейтинг среднее"></span></li>
+							<li><span class="star4" title="Рейтинг хорошо"></span></li>
+							<li><span class="star5" title="Рейтинг очень хорошо"></span></li>
+						</ul>
+					</div>
+					<div class="review">
+						3 отзыва
+					</div>
+				</div>
+			</div>
+			<div class="analog-products__cards">
+				<div class="analog-products__cards-img"><img src="img/another-product/another_products-3.jpg" alt=""></div>
+				<div class="analog-products__cards-cod-presence">
+					<div class="analog-products__cards-cod">Код товара:39207</div>
+					<div class="analog-products__cards-presence">В наличии</div>
+				</div>
+
+				<div class="analog-products__cards-description">Трансмиссионное масло
+					CASTRO Manual EP 80W-90 1л
+				</div>
+				<div class="analog-products__cards-price">
+					<div class="standart-price">
+						<span>104</span> <small>грн</small>
+					</div>
+					<div class="action-price">
+						<span>125</span> <small>грн</small>
+					</div>
+				</div>
+				<div class="button-buy__compare flex-group">
+					<div class="button-buy">
+						Купить
+					</div>
+					<div class="compare">
+
+					</div>
+				</div>
+				<div class="rating-container-wrap flex-group">
+					<div class="rating-container">
+						<ul class="rating clearfix">
+							<li class="current" style="width: 100%;"><span class="star1"  title="Рейтинг плохо"></span></li>
+							<li><span class="star2" title="Рейтинг норм"></span></li>
+							<li><span class="star3" title="Рейтинг среднее"></span></li>
+							<li><span class="star4" title="Рейтинг хорошо"></span></li>
+							<li><span class="star5" title="Рейтинг очень хорошо"></span></li>
+						</ul>
+					</div>
+					<div class="review">
+						3 отзыва
+					</div>
+				</div>
+			</div>
+			<div class="analog-products__cards">
+				<div class="analog-products__cards-img"><img src="img/another-product/another_products-2.jpg" alt=""></div>
+				<div class="analog-products__cards-cod-presence">
+					<div class="analog-products__cards-cod">Код товара:39207</div>
+					<div class="analog-products__cards-presence">В наличии</div>
+				</div>
+
+				<div class="analog-products__cards-description">Трансмиссионное масло
+					CASTRO Manual EP 80W-90 1л
+				</div>
+				<div class="analog-products__cards-price">
+					<div class="standart-price">
+						<span>104</span> <small>грн</small>
+					</div>
+					<div class="action-price">
+						<span></span> <small></small>
+					</div>
+				</div>
+				<div class="button-buy__compare flex-group">
+					<div class="button-buy">
+						Купить
+					</div>
+					<div class="compare">
+
+					</div>
+				</div>
+				<div class="rating-container-wrap flex-group">
+					<div class="rating-container">
+						<ul class="rating clearfix">
+							<li class="current" style="width: 100%;"><span class="star1"  title="Рейтинг плохо"></span></li>
+							<li><span class="star2" title="Рейтинг норм"></span></li>
+							<li><span class="star3" title="Рейтинг среднее"></span></li>
+							<li><span class="star4" title="Рейтинг хорошо"></span></li>
+							<li><span class="star5" title="Рейтинг очень хорошо"></span></li>
+						</ul>
+					</div>
+					<div class="review">
+						3 отзыва
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
