навигация на нижній слайдер

--- a/app/index.html
+++ b/app/index.html
@@ -673,6 +673,13 @@
 
 	<section class="analog-products">
 		<div class="analog-products__title title1">С этим товаром так же покупают:</div>
+		<div class="analog-products-filter">
+			<div class="filter-element">Омыватели</div>
+			<div class="filter-element">Очистители</div>
+			<div class="filter-element">Топливные фильтры</div>
+			<div class="filter-element active">Моторные масла</div>
+			<div class="filter-element">Инструменты для авто</div>
+		</div>
 		<div class="analog-products__slider owl-carousel owl-theme" id="analog-products__slider3">
 			<div class="analog-products__cards analog-products__cards-action">
 				<div class="analog-products__cards-img"><img src="img/another-product/another_products-1.jpg" alt=""></div>
