--- a/app/index.html
+++ b/app/index.html
@@ -149,7 +149,7 @@
 				<div class="img-product__small">
 					<ul>
 						<li>
-							<a href="img/products/mobil1-5w30.jpg" data-fancybox="images" class="fancybox" rel="group">
+							<a href="img/another-product/another_products-2.jpg" data-fancybox="gal1" class="fancybox" rel="group">
 								<img src="img/small-img/mobil1-5w30-small.jpg" alt="">
 							</a>
 						</li>
@@ -157,25 +157,25 @@
 							<img src="img/small-img/3D-product.jpg" alt="">
 						</li>
 						<li>
-							<a data-fancybox href="https://www.youtube.com/embed/c5fKqmXh7W8" rel="group">
+							<a href="https://www.youtube.com/embed/c5fKqmXh7W8" data-fancybox="gal1" rel="group" class="fancybox">
 								<img src="img/small-img/video-product.jpg" alt="">
 							</a>
 						</li>
 						<li>
-							<a href="img/products/mobil1-5w30.jpg" class="fancybox" data-fancybox="images" rel="group">
+							<a href="img/another-product/another_products-4.jpg" class="fancybox" data-fancybox="gal1" rel="group">
 								<img src="img/small-img/placehold-product.jpg" alt="">
 							</a>
 
 						</li>
 						<li>
-							<a href="img/products/mobil1-5w30.jpg" class="fancybox" data-fancybox="images" rel="group">
+							<a href="img/another-product/another_products-3.jpg" class="fancybox" data-fancybox="gal1" rel="group">
 								<img src="img/small-img/placehold-product.jpg" alt="">
 							</a>
 						</li>
 					</ul>
 				</div>
 				<div class="img-product__big">
-					<a href="img/products/mobil1-5w30.jpg" class="fancybox" data-fancybox="images" rel="group">
+					<a href="img/products/mobil1-5w30.jpg" class="fancybox" data-fancybox="gal1" rel="group">
 						<img src="img/products/mobil1-5w30.jpg" alt="масло">
 					</a>
 				</div>
